--- a/AttenceProject/Views/SysWorkOffs/Index.cshtml
+++ b/AttenceProject/Views/SysWorkOffs/Index.cshtml
@@ -191,7 +191,7 @@
 			sn = $("#sn").attr("checked") ? "s" : "",
 			type = { "Y": py + sy, "N": pn + sn };
             zTree.setting.check.chkboxType = type;
-            showCode('setting.check.chkboxType = { "Y" : "' + type.Y + '", "N" : "' + type.N + '" };');
+            //showCode('setting.check.chkboxType = { "Y" : "' + type.Y + '", "N" : "' + type.N + '" };');
         }
         var setting2 = {
             check: {
@@ -226,28 +226,27 @@
     </script>
     <!-- Begin of easyui-dialog -->
     <div data-options="closed:false,iconCls:'icon-save'" style="width:600px; padding:10px;">
-        <span>注：此申请将自动抄送给系统指定的抄送人</span>
-
-        <form id="wu-form" method="post" name="form1" action="~/SysWorkOffs/SaveAdd">
+        <div class="easyui-panel" title="调休申请发起">
+        <form id="wu-form" method="post" name="form1" style="margin:3%;" action="~/SysWorkOffs/SaveAdd">
             <table style="">
                 <tr style="display:none">
-                    <td width="70" align="right">ID:</td>
+                    <td width="100" align="right">ID:</td>
                     <td><input type="text" name="ID" class="wu-text" value="@cook.Values["UserID"]" /></td>
                 </tr>
                 <tr>
-                    <td width="70" align="right">调休人姓名:</td>
+                    <td width="100" align="right">调休人姓名:</td>
                     <td><input type="text" name="UserName" class="wu-text" value="@cook.Values["UserName"]" /></td>
                 </tr>
                 <tr>
-                    <td width="70" align="right">工号:</td>
+                    <td width="100" align="right">工号:</td>
                     <td><input type="text" name="UserCode" class="wu-text" value="@cook.Values["UserCode"]" /></td>
                 </tr>
                 <tr>
-                    <td width="70" align="right">调休原因:</td>
+                    <td width="100" align="right">调休原因:</td>
                     <td><input type="text" name="VacationReason" class="wu-text" /></td>
                 </tr>
                 <tr>
-                    <td width="70" align="right">调休类型:</td>
+                    <td width="100" align="right">调休类型:</td>
                     <td>
                         <select class="easyui-combobox" panelHeight="auto" style="width:100px" id="WorkOffType" name="WorkOffType" data-options="required:true,
                    url:'../../SysWorkOffs/GetWorkOffType',
@@ -259,13 +258,13 @@
                     </td>
                 </tr>
                 <tr>
-                    <td width="70" align="right">紧急联系人:</td>
+                    <td width="100" align="right">紧急联系人:</td>
                     <td>
                         <input type="text" name="Emergency" class="wu-text" />
                     </td>
                 </tr>
                 <tr>
-                    <td width="70" align="right">加班开始时间:</td>
+                    <td width="100" align="right">加班开始时间:</td>
                     <td>
                         <input class="easyui-datetimebox" value="" name="OverTimeStart" id="OverTimeStart" style="width:200px">
                     </td>
@@ -277,52 +276,56 @@
                     </td>
                 </tr>
                 <tr>
-                    <td width="70" align="right">调休开始时间:</td>
+                    <td width="100" align="right">调休开始时间:</td>
                     <td>
                         <input class="easyui-datetimebox" value="" name="VacationStart" id="VacationStart" style="width:200px">
                     </td>
                 </tr>
                 <tr>
-                    <td width="70" align="right">调休结束时间:</td>
+                    <td width="100" align="right">调休结束时间:</td>
                     <td>
                         <input class="easyui-datetimebox" value="" name="VacationEnd" id="VacationEnd" style="width:200px">
                     </td>
                 </tr>
                 <tr style="display:none">
-                    <td width="70" align="right">审批人流:</td>
+                    <td width="100" align="right">审批人流:</td>
                     <td>
                         <input type="text" value="" name="SendFor" id="SendFor" style="display:none" />
                     </td>
                 </tr>
                 <tr style="display:none">
-                    <td width="70" align="right">抄送人流:</td>
+                    <td width="100" align="right">抄送人流:</td>
                     <td>
                         <input type="text" name="CopyFor" id="CopyFor" style="display:none" />
                     </td>
                 </tr>
             </table>
         </form>
-        <div id="SendForTree">
-            <div class="zTreeDemoBackground left" style="float:left" style="height:80px">
+            <div id="SendForTree" style="height:175px; margin:3%">
+                <div style="margin-left:5%">选择审批人（将左侧员工向右侧拖入，可规定右侧顺序，规定审批顺序）：</div>
+                <div class="zTreeDemoBackground left" style="float:left;height:175px">
 
-                <ul id="treeDemo" class="ztree" style="height:80px"></ul>
+                    <ul id="treeDemo" class="ztree" style="height:150px"></ul>
+                </div>
+                <div class="right" style="height:80px;float:left;">
+                    <ul id="treeDemo2" class="ztree" style="height:150px"></ul>
+                </div>
             </div>
-            <div class="right" style="height:80px">
-                <ul id="treeDemo2" class="ztree" style="height:80px"></ul>
-            </div>
-        </div>
-        <div id="SendForTree" style="height:120px">
-            <div class="zTreeDemoBackground left" style="float:left;height:120px">
+            <div style="height:10px;">&nbsp;</div>
+            <div id="SendForTree" style="height:175px; float:left; margin:3%;">
+                <div style="margin-left:10%">选择抄送人：</div>
+                <div class="zTreeDemoBackground left" style="float:left;height:175px">
 
-                <ul id="treeDemo3" class="ztree" style="height:80px"></ul>
+                    <ul id="treeDemo3" class="ztree" style="height:150px"></ul>
+                </div>
             </div>
-        </div>
 
         <div style="width:85%;">
-            <a href="#" class="easyui-linkbutton" onclick="saveWorkOff()" data-options="iconCls:'icon-ok'" style="padding:2px 0px;width:70%;">
+            <a href="#" class="easyui-linkbutton" onclick="saveWorkOff()" data-options="iconCls:'icon-ok'" style="padding:2px 0px;width:70%;margin:3%;margin-left:24%">
                 提交申请
             </a>
         </div>
+        </div> 
     </div>
     <!-- End of easyui-dialog -->
 
