--- a/AttenceProject/Views/SysVacations/Approve.cshtml
+++ b/AttenceProject/Views/SysVacations/Approve.cshtml
@@ -172,7 +172,7 @@
 	                for (var i = 0; i < length; i++) {
 
 	                    //alert(item);
-	                    afterstr += '<tr class="tr_after"><td align="right" width="30">审批人:</td><td align="right" width="30">' + data[i].LastChecker + '</td></tr>' +
+	                    afterstr += '<tr class="tr_after"><td align="right" width="30">审批人:</td><td align="right" width="30">' + data[i].UserName + '</td></tr>' +
 	                              '<tr class="tr_after"><td align="right" width="70">审批意见:</td><td align="right" width="30">' + data[i].Applyrate + '</td></tr>' +
 	                             '<tr class="tr_after"><td align="right" width="70">审批结果:</td><td align="right" width="30">' + data[i].ApplyStatus + '</td></tr>' +
                                   '<tr class="tr_after" style="height:20px"></tr>';
